# hw-json-lens

./: .gitignore  LICENSE  README.md  circle.yml  hw-json-lens.cabal  hw-xml-lens.cabal  package.yaml  packages.list  stack.yaml
.circleci/: config.yml  whitelist-dependencies.txt
app/: Main.hs
bench/: Main.hs
src/HaskellWorks/Data/: ListMap.hs
src/HaskellWorks/Data/Json/: Lens.hs
src/HaskellWorks/Data/Xml/: Lens.hs
test/HaskellWorks/Data/Json/: LensSpec.hs  NthSpec.hs
test/HaskellWorks/Data/Xml/: XmlLensSpec.hs
