cabal-version:  1.12

name:           hw-json-lens
version:        0.1.0.0
synopsis:       Lens for hw-json
description:    Lens for hw-json. Please see README.md
category:       Data, Succinct Data Structures, Data Structures, JSON
homepage:       http://github.com/haskell-works/hw-json-lens#readme
bug-reports:    https://github.com/haskell-works/hw-json-lens/issues
author:         Alexey Raga, John Ky
maintainer:     alexey.raga@gmail.com, newhoggy@gmail.com
copyright:      2016 Alexey Raga, 2018 John Ky
license:        MIT
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/haskell-works/hw-json-lens

library
  exposed-modules:
      HaskellWorks.Data.Json.Lens
      HaskellWorks.Data.ListMap
  other-modules:    Paths_hw_json_lens
  hs-source-dirs:   src
  ghc-options:      -Wall -O2 -msse4.2
  build-depends:
      base            >= 4        && < 5
    , bytestring      >= 0.10     && < 0.11
    , containers      >= 0.5      && < 0.6
    , hw-json         >= 1.0      && < 1.2
    , lens            >= 4        && < 5
    , scientific      >= 0.3      && < 0.4
    , word8           >= 0.1      && < 0.2
  default-language: Haskell2010

benchmark bench
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Paths_hw_json_lens
  hs-source-dirs:   bench
  ghc-options:      -Wall -O2 -msse4.2
  build-depends:
      base                >= 4        && < 5
    , bytestring          >= 0.10     && < 0.11
    , criterion           >= 1.4      && < 1.6
    , hw-json             >= 1.0      && < 1.2
    , hw-json-lens
    , lens                >= 4        && < 5
  default-language: Haskell2010

test-suite hw-json-lens-test
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  other-modules:    Paths_hw_json_lens
  hs-source-dirs:   test
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base                >= 4.8      && < 5
    , bytestring          >= 0.10     && < 0.11
    , hedgehog            >= 0.5      && < 0.7
    , hspec               >= 2.4      && < 3
    , hw-bits             >= 0.7      && < 0.7.1
    , hw-hspec-hedgehog   >= 0.1.0.4  && < 0.2
    , hw-json             >= 1.0      && < 1.2
    , hw-json-lens
    , hw-prim             >= 0.6.2    && < 0.6.3
    , lens                >= 4        && < 5
    , vector              >= 0.12     && < 0.13
  default-language: Haskell2010
  build-tool-depends: hspec-discover:hspec-discover
