name:                   hw-xml-lens
version:                0.0.0.1
synopsis:               XML Lens API
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-xml-lens#readme
license:                MIT
license-file:           LICENSE
author:                 Alexey Raga
maintainer:             alexey.raga@gmail.com
copyright:              2016 Alexey Raga
category:               Data
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.22

executable hw-xml-lens-example
  hs-source-dirs:       app
  main-is:              Main.hs
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -O2 -Wall -msse4.2
  build-depends:        base                          >= 4          && < 5
                      , bytestring
                      , conduit
                      , criterion
                      , errors
                      , hw-bits
                      , hw-conduit
                      , hw-diagnostics
                      , hw-xml-lens
                      , hw-prim                       >= 0.0.3.1
                      , hw-rankselect                 >= 0.0.0.5
                      , lens >=3.8
                      , mmap
                      , resourcet
                      , vector
  default-language:     Haskell2010

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Data.Xml.lens
  build-depends:        base                          >= 4          && < 5
                      , array
                      , ansi-wl-pprint
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , dlist
                      , hw-bits
                      , hw-conduit
                      , hw-diagnostics
                      , hw-xml
                      , hw-lens
                      , hw-parser
                      , hw-prim                       >= 0.0.3.1
                      , hw-rankselect                 >= 0.0.0.5
                      , lens >=3.8
                      , mmap
                      , mono-traversable
                      , resourcet
                      , text
                      , vector
                      , word8

  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2

test-suite hw-xml-lens-test
  type:                 exitcode-stdio-1.0
  hs-source-dirs:       test
  main-is:              Spec.hs
  other-modules:        HaskellWorks.Data.Xml.XmlLensSpec
  build-depends:        base                          >= 4          && < 5
                      , attoparsec
                      , bytestring
                      , containers
                      , conduit
                      , hspec
                      , hw-bits
                      , hw-conduit
                      , hw-xml-lens
                      , hw-prim                       >= 0.0.3.1
                      , hw-rankselect                 >= 0.0.0.5
                      , lens >=3.8
                      , mmap
                      , parsec
                      , QuickCheck
                      , resourcet
                      , transformers
                      , vector
  ghc-options:          -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:     Haskell2010

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-xml-lens

benchmark bench
    Type: exitcode-stdio-1.0
    HS-Source-Dirs: bench
    Main-Is: Main.hs
    GHC-Options: -O2 -Wall -msse4.2
    Default-Language: Haskell2010
    Build-Depends:      base                          >= 4          && < 5
                      , bytestring
                      , conduit
                      , criterion
                      , hw-bits
                      , hw-conduit
                      , hw-xml-lens
                      , hw-prim                       >= 0.0.3.1
                      , hw-rankselect                 >= 0.0.0.5
                      , lens >=3.8
                      , mmap
                      , resourcet
                      , vector
